Update social links and add floating icons

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
     <h2>Come Join & Play With Me</h2>
 
     <div class="links">
-      <a href="https://www.instagram.com/hopeisnotaman" target="_blank">
+      <a href="https://www.instagram.com/hopeisnotaman" target="_blank" rel="noopener">
         Instagram
       </a>
 
-      <a href="#" id="discordBtn">
-        Discord: @justluck12
+      <a href="https://discord.gg/XvAMATVM" target="_blank" rel="noopener">
+        Join Discord
       </a>
     </div>
   </section>
@@ -73,6 +73,17 @@
   <footer>
     <p>© 2026 Gavi Vadhwa | Game On 🎮</p>
   </footer>
+
+  <!-- FLOATING SOCIAL ICONS -->
+  <div class="floating-social">
+    <a href="https://www.instagram.com/hopeisnotaman" target="_blank" rel="noopener" title="Instagram">
+      <img alt="Instagram" src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png">
+    </a>
+
+    <a href="https://discord.gg/XvAMATVM" target="_blank" rel="noopener" title="Discord">
+      <img alt="Discord" src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png">
+    </a>
+  </div>
 
   <script src="script.js"></script>
 </body>
